# junkdrawer

./: .biomeignore  .gitignore  AGENTS.md  README.md  ROADMAP.md  biome.json  index.html  justfile  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/hooks/: protect-notes.py
.github/workflows/: rust.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bookmarks.rs  database.rs  db_commands.rs  files.rs  lib.rs  main.rs  typesense.rs
src-tauri/src/entities/: item.rs  mod.rs
src-tauri/src/migration/: m20241215_000001_create_items_table.rs  m20250916_000001_add_bookmark_fields.rs  m20250916_003241_add_file_metadata_fields.rs  mod.rs
src/components/: ItemManager.tsx  NotesWorkspace.test.tsx  NotesWorkspace.tsx
src/components/ui/: button.tsx
src/lib/: database.test.ts  database.ts  typesense.test.ts  typesense.ts  useTypesense.test.tsx  useTypesense.ts
src/types/: database.ts
