[package]
name = "junkdrawer"
version = "0.1.0"
description = "A place to stash all your digital stuff"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "junkdrawer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["time"] }
thiserror = "1.0"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sea-orm = { version = "^1.0.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "^1.0.0", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
mime_guess = "2.0"
